security: jump to latest next.js to resolve CVE-2025-66478

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,12 +26,3 @@
     --radius: 0.5rem;
   }
 }
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
